Thu Oct 25 13:35:07 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/mkconfig.rb: remove string literal concatenation.

Thu Oct 25 13:09:01 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y: show a warning for concatenating string literals because
	  it will be deprecated in the future.
	  patched by mame (Yusuke Endoh) at [ruby-core:44207].
	  [ruby-core:44156] [Feature #6265]

Wed Oct 24 18:49:16 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/objspace/objspace.c (type2sym, count_objects_size): use enum
	  instead of size_t which may be larger than actual values.

Wed Oct 24 17:41:24 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: add `-x' or `--exclude' option
	  to specify exclude benchmark name pattern.
	  You can specify "-x foo" if you want to exclude the benchmarks
	  if the name of benchmark contains `foo'.

Wed Oct 24 11:57:24 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_prepare_free_objects): rename to match the behavior of
	  this function.

Wed Oct 24 11:55:19 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (reachable_object_from_i): change data
	  structure of the result of reachable objects. Keys of table
	  contains object_id of each reachable objects. Value of table
	  is an object itself or an instance of InternalObjectWrapper.
	  To avoid duplication, we use st_table and object_id keys.

	* ext/objspace/objspace.c (type2sym): bug fix.
	  Should use `i' instead of `type'.

Wed Oct 24 10:33:09 2012  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect, gc_marks): move the location of
	  clear and restore rb_objspace_t::mark_func_data
	  from garbage_collect() to gc_marks().

Wed Oct 24 10:17:45 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (Init_objspace): add a new method
	  `ObjectSpace::InternalObjectWrapper#internal_object_id' which returns
	  an object id of a wrapped internal object.

Wed Oct 24 08:55:04 2012  Koichi Sasada  <ko1@atdot.net>
