@@ -1253,12 +1253,6 @@ rb_define_method(VALUE klass, const char *name, VALUE (*func)(ANYARGS), int argc
 }
 
 void
-rb_define_frameless_method(VALUE klass, const char *name, VALUE (*func)(ANYARGS), int argc)
-{
-    rb_add_method_cfunc_frameless(klass, rb_intern(name), func, argc, NOEX_PUBLIC);
-}
-
-void
 rb_define_protected_method(VALUE klass, const char *name, VALUE (*func)(ANYARGS), int argc)
 {
     rb_add_method_cfunc(klass, rb_intern(name), func, argc, NOEX_PROTECTED);
